--- a/MySimpleUtilities.csproj
+++ b/MySimpleUtilities.csproj
@@ -69,7 +69,8 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XboxControllerAsMouse.cs" />
+    <Compile Include="Utilities\DesktopReorganizer.cs" />
+    <Compile Include="Utilities\XboxControllerAsMouse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
