--- a/MySimpleUtilities.csproj
+++ b/MySimpleUtilities.csproj
@@ -69,8 +69,13 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\DesktopReorganizer.cs" />
-    <Compile Include="Utilities\XboxControllerAsMouse.cs" />
+    <Compile Include="utilities\exceptions\UnexistingUtilityException.cs" />
+    <Compile Include="utilities\FolderReorganizer.cs" />
+    <Compile Include="utilities\factory\AbstractUtility.cs" />
+    <Compile Include="utilities\factory\IUtility.cs" />
+    <Compile Include="utilities\factory\UtilityFactory.cs" />
+    <Compile Include="HelperComponent.cs" />
+    <Compile Include="utilities\XboxControllerAsMouse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
